--- a/React_1/index.html
+++ b/React_1/index.html
@@ -7,7 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<style>
+    p{
+    margin-left: auto;
+    margin-right: auto;
+    width: 10em;
+    font-size: 190%;
+}
+</style>
+
+<body align="center">
     <p>
         Hello, React!
 
